--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,36 @@
-site_name: My Docs
+site_name: ReqMap Technical Documentation
+theme:
+  name: material
+  version: 9.5.33
+  features:
+    - navigation.tabs
+    - navigation.sections
+    - toc.integrate
+    - navigation.top
+    - search.suggest
+    - search.highlight
+    - content.tabs.link
+    - content.code.annotation
+    - content.code.copy
+  language: en
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+      primary: teal
+      accent: purple
+    - scheme: slate
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+      primary: teal
+      accent: lime
+extra:
+  social:
+    - icon: fontawesome/brands/github-alt
+      link: https://github.com/jerameee
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/jeremy-f-570672239/
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/jeramee_tech
