--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,9 @@ theme:
     - search.highlight
     - content.tabs.link
     - content.code.annotation
+    - content.code.annotate
     - content.code.copy
+    - content.code.select
   language: en
   palette:
     - scheme: default
@@ -34,3 +36,13 @@ extra:
       link: https://www.linkedin.com/in/jeremy-f-570672239/
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/jeramee_tech
+
+markdown_extensions:
+  - pymdownx.highlight:
+      use_pygments: true
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
